# temporal_pose

./: LICENSE  README.md
dataset_generator/: BOPgenerator.py  CameraIntrinsics.py  Generator_manual.blend  README.md  SceneGenerator.py  Undistorter.py  sample_trajectories.py
robotic_experiment/ros_cosy_tracking/: CMakeLists.txt  README.md  environment.yaml  notes.txt  package.xml  setup.py  setup_env_var.sh
robotic_experiment/ros_cosy_tracking/action/: StartCartesianImpedance.action
robotic_experiment/ros_cosy_tracking/data/: frames_prediction.p  frames_px_counts.p  scene_camera.json
robotic_experiment/ros_cosy_tracking/data/dynamic/: frames_prediction.p  frames_px_counts.p  scene_camera.json
robotic_experiment/ros_cosy_tracking/launch/: perception.launch
robotic_experiment/ros_cosy_tracking/msg/: CosyDetection.msg  CosyDetections.msg  Track.msg
robotic_experiment/ros_cosy_tracking/nodes/: baseline_est.py  orchestrator.py  panda_ctrl.py  ros_camera_pose_simulation.py  ros_cosycov.py  ros_cosycov_simulation.py  ros_full_simulation.py  ros_gtsam.py  ros_gtsam_refactored.py  ros_vizualize_cosy.py  ros_vizualize_tracks.py  simulate_object.py
robotic_experiment/ros_cosy_tracking/src/ros_cosy_tracking/: buffer.py  utils.py
sam/: README.md  ablation.py
short_horizon/: main.py
